NXBT-3977: Modernize Java code to leverage Java 25 language features
- use switch expressions and multi-label cases in ConnectHttpConnector, LocalDownloadingPackage, CUDFHelper, and TrialRegistrationResponse
- use pattern matching for instanceof in IntrospectionHelper and equals implementations across PlatformId, PlatformVersion, PlatformVersionRange, PackageDependency, and Version
- use text blocks, try-with-resources, and sequenced collection accessors in LogicalInstanceIdentifier and ProxyPacConfigurationTest, plus getFirst/getLast in dependency helpers
- replace verbose immutable collection initialization with List.of in RegistrationHelper
- touch files: ConnectHttpConnector.java, IntrospectionHelper.java, LocalDownloadingPackage.java, LogicalInstanceIdentifier.java, CUDFHelper.java, DependencyResolution.java, RecursiveDependencyResolver.java, PlatformId.java, PlatformVersion.java, PlatformVersionRange.java, RegistrationHelper.java, TrialRegistrationResponse.java, PackageDependency.java, Version.java, ProxyPacConfigurationTest.java